feat: pratica07/ATIVIDADE3/ENDPOINTS DE AUTENTICAÇÃO